--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
 
+<!DOCTYPE html>
+<html lang="nl">
+<head>
+  <meta charset="UTF-8">
+  <title>Cosy Readings Boekenblog</title>
+  <style>
+    body { font-family: Georgia, serif; background: #fdf6f0; color: #333; margin: 2em; }
+    h1 { color: #8e44ad; }
+    article { margin-bottom: 2em; padding-bottom: 1em; border-bottom: 1px solid #ccc; }
+    footer { margin-top: 3em; font-size: 0.9em; color: #888; }
+  </style>
+</head>
+<body>
+  <h1>Cosy Readings Boekenblog 📚</h1>
+
+  <article>
+    <h2>“De zeven zussen” – Lucinda Riley</h2>
+    <p><strong>Gelezen:</strong> April 2025</p>
+    <p>Een meeslepend verhaal vol mysterie en romantiek. Perfect voor op vakantie of tijdens regenachtige avonden...</p>
+  </article>
+
+  <article>
+    <h2>“Het achtste leven” – Nino Haratischwili</h2>
+    <p><strong>Gelezen:</strong> Maart 2025</p>
+    <p>Een indrukwekkend familie-epos met historische diepgang. Lisa kon dit boek niet wegleggen.</p>
+  </article>
+
+  <footer>
+    Gepubliceerd door Cosy Readings.
+  </footer>
+</body>
+</html>
