--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </style>
 </head>
 <body>
-  <h1>Cosy Readings Boekenblog 📚</h1>
+  <h1>Cosy Readings Boekenblog </h1>
 
   <article>
     <h2>“De zeven zussen” – Lucinda Riley</h2>
