--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Cozy Readings - Boekenblog</title>
+  <title>Cosy Readings - Boekenblog</title>
   <meta name="description" content="Een charmante boekenblog om leesliefde te delen – van recensies tot verborgen parels." />
   
   <!-- Google Fonts -->
@@ -27,7 +27,7 @@
     }
 
     header {
-      background-color: #4b3f72;
+      background-color: #d6a517;
       color: #fff;
       padding: 1.5rem 2rem;
       text-align: center;
@@ -48,7 +48,7 @@
     }
 
     nav {
-      background-color: #6c5ce7;
+      background-color: #d6a517;
       padding: 0.75rem 2rem;
       text-align: center;
     }
@@ -96,7 +96,7 @@
       font-family: 'Merriweather', serif;
       font-weight: 700;
       margin-bottom: 0.75rem;
-      color: #4b3f72;
+      color: #d6a517;
     }
     article.post p.excerpt {
       flex-grow: 1;
@@ -110,18 +110,18 @@
     article.post a.read-more {
       display: inline-block;
       margin-top: 1rem;
-      color: #6c5ce7;
+      color: #d6a517;
       font-weight: 600;
       text-decoration: none;
       border-bottom: 2px solid transparent;
       transition: border-color 0.3s ease;
     }
     article.post a.read-more:hover {
-      border-color: #6c5ce7;
+      border-color: #d6a517;
     }
 
     footer {
-      background-color: #4b3f72;
+      background-color: #d6a517;
       color: white;
       text-align: center;
       padding: 1rem 2rem;
@@ -144,7 +144,7 @@
 <body>
 
   <header>
-    <h1>Cozy Readings</h1>
+    <h1>Cosy Readings</h1>
     <p>Een charmante boekenblog om leesliefde te delen</p>
   </header>
 
